--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Sass!
-    </title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Hola Sass!</title>
 </head>
 <body>
+    <h1>Hola mundo!!!</h1>
     <div>
-        <h1>Hola mundo!!!</h1>
+       <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, perspiciatis impedit? Amet culpa ut, nihil, cum, quasi tenetur ullam doloremque temporibus aperiam id accusamus iure modi? Dolorem velit debitis eaque?</p>
     </div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minima repellendus sunt id ad dolor magnam necessitatibus quo fugiat fugit vitae sit quis, laboriosam excepturi reprehenderit consectetur deserunt illum explicabo?</p>
+
+
 </body>
 </html>
